<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/background">

    <EditText
        android:id="@+id/text_game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/game_title_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/text_game_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/game_price_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@id/text_game_title"
        app:layout_constraintStart_toStartOf="@id/text_game_title"
        app:layout_constraintTop_toBottomOf="@id/text_game_title"/>

    <EditText
        android:id="@+id/text_game_console"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/game_console_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@id/text_game_price"
        app:layout_constraintStart_toStartOf="@id/text_game_price"
        app:layout_constraintTop_toBottomOf="@id/text_game_price" />

    <EditText
        android:id="@+id/text_game_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/date_purchased_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@id/text_game_console"
        app:layout_constraintStart_toStartOf="@id/text_game_console"
        app:layout_constraintTop_toBottomOf="@id/text_game_console" />

    <EditText
        android:id="@+id/text_game_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/game_condition_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@id/text_game_date"
        app:layout_constraintStart_toStartOf="@id/text_game_date"
        app:layout_constraintTop_toBottomOf="@id/text_game_date" />

</androidx.constraintlayout.widget.ConstraintLayout>