<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp"
        android:backgroundTint="@color/grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/game_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@id/game_title"
                app:layout_constraintStart_toStartOf="@id/game_title"
                app:layout_constraintTop_toBottomOf="@id/game_title" />

            <TextView
                android:id="@+id/console_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/console_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@id/price_text"
                app:layout_constraintStart_toStartOf="@id/price_text"
                app:layout_constraintTop_toBottomOf="@id/price_text" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_purchased_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@id/console_text"
                app:layout_constraintStart_toStartOf="@id/console_text"
                app:layout_constraintTop_toBottomOf="@id/console_text" />

            <TextView
                android:id="@+id/condition_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/condition_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@id/date_text"
                app:layout_constraintStart_toStartOf="@id/date_text"
                app:layout_constraintTop_toBottomOf="@id/date_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>